(implementation) base connection

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,6 @@ quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.6.3
 org.gradle.configuration-cache=true
 org.gradle.jvmargs=-Xmx4g
+kotlin.code.style=official
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 #org.gradle.logging.level=info
