--- a/kluster-master/src/main/resources/application.properties
+++ b/kluster-master/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 quarkus.datasource.db-kind=sqlite
+
+isk.cluster.token=39c5ecff-a60e-465b-bfa0-dd2da8a07eb1
+
+quarkus.swagger-ui.enable=true
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/swagger
+quarkus.devservices.enabled=true
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=/.*/
+%dev.quarkus.log.category."org.isk".level=debug
