--- a/kluster-slave/src/main/docker/Dockerfile.native
+++ b/kluster-slave/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/kluster_slave .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/kluster-master .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/kluster_slave
+# docker run -i --rm -p 8080:8080 quarkus/kluster-master
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
