--- a/kluster-slave/src/main/docker/Dockerfile.native-micro
+++ b/kluster-slave/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/kluster_slave .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/kluster-master .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/kluster_slave
+# docker run -i --rm -p 8080:8080 quarkus/kluster-master
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
